# ECN-ARPRO-Open-Projects

./: CMakeLists.txt
inc/: astar4puzzle.cpp  astar4puzzle.h  battleshipsplayer.cpp  battleshipsplayer.h  four_in_row_helper_classes.h  gaindividual.cpp  gaindividual.h  ganorm.cpp  ganorm.h  gapopulation.cpp  gapopulation.h  gradientdescent.cpp  gradientdescent.h  nodepuzzle.cpp  nodepuzzle.h  vectoralg.cpp  vectoralg.h
src/: 21sticks.cpp  a_star_puzzle_main.cpp  battle_ships_main.cpp  four_in_row_main.cpp  ga_main.cpp  gradient_descen_main.cpp  gradient_descent.cpp
