project(open_projects)
add_compile_options(-std=c++11)
set(default_build_type "Debug")
add_executable(ga_example src/ga_main.cpp inc/gaindividual.h inc/gaindividual.cpp inc/gapopulation.h inc/gapopulation.cpp)
add_executable(grad_descent_norm2 src/gradient_descen_main.cpp inc/ganorm.h inc/ganorm.cpp inc/gradientdescent.h inc/gradientdescent.cpp inc/vectoralg.h inc/vectoralg.cpp)
add_executable(battle_ships src/battle_ships_main.cpp inc/battleshipsplayer.h inc/battleshipsplayer.cpp)
add_executable(a_star_puzzle src/a_star_puzzle_main.cpp inc/nodepuzzle.h inc/nodepuzzle.cpp inc/astar4puzzle.h inc/astar4puzzle.cpp)
